Add appbar component

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,4 @@
-@import "styles/base";
-@import "styles/login";
-@import "styles/typography";
+@import 'styles/base';
+@import 'styles/typography';
+@import 'styles/login';
+@import 'styles/dashboard';
